For the latest news, visit the Linux Cafe at the PegaSoft web site. 

SparForte 2.0's focus was on ???.

CHANGES SINCE 1.5

1. Change: configure modified for FreeBSD 10 and ADAVOX code (commented out) removed.  Doesn't fully work on FreeBSD 10 yet.

2. Fix: eliminated warnings on newer versions of gcc for tinyserver buffer and apq printf formatting one one line

3. New: Standard OpenGL functions (not documented yet) : glNormal3b, glNormal3d, glNormal3f, glNormal3i, glNormal3s, glIndexd, glIndexf, glIndexi, glIndexs, glRectd, glRectf, glRecti, glRects,

4. New: OpenGL extension functions

5. Change: byte code changed - reserved word limit moved from 128 to 8192.

6. New: reserved words interface, overriding, some, synchronized.  There are in Ada 2005, 2012 but are not used in SparForte.  Reserved for compatibility reasons.

7. Change: containers package was declared in parser_doubly now extracted into separate package.

8. New: vectors (singly linked list) package. new_vector, clear, to_vector, capacity, reserve_capacity, length, set_length, is_empty, append, prepend, first_index, last_index, element [not finished], first_element, last_element, delete_first, delete_last, contains, move, reverse_elements, flip [docs needed] [tests needed]

